objects/Pancard__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Number__c</fullName>
        <label>Pan Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Pancard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pancard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pancards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>